--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-macros",
   "main": "./lib/macros",
   "version": "0.2.1",
-  "description": "Quickly define macros and other scripts to run",
+  "description": "Quickly define commands to extend atom dynamically",
   "repository": "https://github.com/pbihler/atom-macros",
   "license": "MIT",
   "engines": {
