--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "coffee-script": "^1.8",
     "eval": "^0.1.0",
-    "pathwatcher": "^3.1.0"
+    "pathwatcher": "^3.1.0",
+    "underscore-plus": "^1.6.6"
   }
 }
